force-app/main/default/objects/Payment_Info__c/fields/Authorisation_mode__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_mode__c</fullName>
    <label>Authorisation mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>