force-app/main/default/objects/Payment_Info__c/fields/Business_License_Application__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business License Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Payment Infos</relationshipLabel>
    <relationshipName>Payment_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>