force-app/main/default/objects/Payment_Info__c/fields/Cancel_method__c.field-meta.xml
<CustomField>
    <fullName>Cancel_method__c</fullName>
    <label>Cancel method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>