force-app/main/default/objects/Payment_Info__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payment Infos</relationshipLabel>
    <relationshipName>Payment_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>