force-app/main/default/objects/Payment_Info__c/fields/Case_Finished__c.field-meta.xml
<CustomField>
    <fullName>Case_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Finished</label>
    <type>Checkbox</type>
</CustomField>