force-app/main/default/objects/Payment_Info__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Payment Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>