force-app/main/default/objects/Payment_Info__c/fields/Delayed_capture__c.field-meta.xml
<CustomField>
    <fullName>Delayed_capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed capture</label>
    <type>Checkbox</type>
</CustomField>