force-app/main/default/objects/Payment_Info__c/fields/Events_method__c.field-meta.xml
<CustomField>
    <fullName>Events_method__c</fullName>
    <label>Events method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>