force-app/main/default/objects/Payment_Info__c/fields/Events_URL__c.field-meta.xml
<CustomField>
    <fullName>Events_URL__c</fullName>
    <label>Events URL</label>
    <type>Url</type>
</CustomField>