force-app/main/default/objects/Payment_Info__c/fields/Moto__c.field-meta.xml
<CustomField>
    <fullName>Moto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moto</label>
    <type>Checkbox</type>
</CustomField>