force-app/main/default/objects/Payment_Info__c/fields/Next_method__c.field-meta.xml
<CustomField>
    <fullName>Next_method__c</fullName>
    <label>Next method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>