force-app/main/default/objects/Payment_Info__c/fields/Next_URL__c.field-meta.xml
<CustomField>
    <fullName>Next_URL__c</fullName>
    <label>Next URL</label>
    <type>Url</type>
</CustomField>