force-app/main/default/objects/Payment_Info__c/fields/Next_URL_charge_token_Id__c.field-meta.xml
<CustomField>
    <fullName>Next_URL_charge_token_Id__c</fullName>
    <label>Next URL charge token Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>