force-app/main/default/objects/Payment_Info__c/fields/Next_URL_post_method__c.field-meta.xml
<CustomField>
    <fullName>Next_URL_post_method__c</fullName>
    <label>Next URL post method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>