force-app/main/default/objects/Payment_Info__c/fields/Next_URL_post_type__c.field-meta.xml
<CustomField>
    <fullName>Next_URL_post_type__c</fullName>
    <label>Next URL post type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>