force-app/main/default/objects/Payment_Info__c/fields/Payment_provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_provider__c</fullName>
    <label>Payment provider</label>
    <length>30</length>
    <type>Text</type>
</CustomField>