force-app/main/default/objects/Payment_Info__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>