force-app/main/default/objects/Payment_Info__c/fields/Refund_amount_available__c.field-meta.xml
<CustomField>
    <fullName>Refund_amount_available__c</fullName>
    <label>Refund amount available</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>