force-app/main/default/objects/Payment_Info__c/fields/Refund_method__c.field-meta.xml
<CustomField>
    <fullName>Refund_method__c</fullName>
    <label>Refund method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>