force-app/main/default/objects/Payment_Info__c/fields/Refund_status__c.field-meta.xml
<CustomField>
    <fullName>Refund_status__c</fullName>
    <label>Refund status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>