force-app/main/default/objects/Payment_Info__c/fields/Refund_URL__c.field-meta.xml
<CustomField>
    <fullName>Refund_URL__c</fullName>
    <label>Refund URL</label>
    <type>Url</type>
</CustomField>