force-app/main/default/objects/Payment_Info__c/fields/Self_method__c.field-meta.xml
<CustomField>
    <fullName>Self_method__c</fullName>
    <label>Self method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>