force-app/main/default/objects/Payment_Info__c/fields/Self_URL__c.field-meta.xml
<CustomField>
    <fullName>Self_URL__c</fullName>
    <label>Self URL</label>
    <type>Url</type>
</CustomField>